--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "author": "newtykins",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.21.1"
+    "axios": "^0.21.1",
+    "i18n-iso-countries": "^6.7.0"
   },
   "devDependencies": {
     "@types/node": "^15.12.2",
