--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "osugame",
+  "name": "osuwu",
   "version": "1.0.0",
-  "description": "A modern wrapper for the osu! API",
+  "description": "A modern library to handle all your osu needs!",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
-  "repository": "https://github.com/newtykins/osu-wrapper",
+  "repository": "https://github.com/newtykins/osuwu",
   "author": "newtykins",
   "license": "MIT",
   "dependencies": {
@@ -15,5 +15,17 @@
   "devDependencies": {
     "@types/node": "^15.12.2",
     "typescript": "^4.3.2"
-  }
+  },
+  "keywords": [
+    "osu",
+    "osugame",
+    "rhythm",
+    "game",
+    "api",
+    "music",
+    "gaming",
+    "wrapper",
+    "pp",
+    "calculator"
+  ]
 }
